# study-media

./: .gitignore  README.md  config.example.toml  pyproject.toml
docs/: design.md  ios-studyplayer.md  usage.md
ios/StudyPlayer/StudyPlayer/: ContentView.swift  Info.plist  Models.swift  PlayerView.swift  StudyPlayerApp.swift  StudyStore.swift  TarStudyPackageReader.swift
ios/StudyPlayer/StudyPlayer.xcodeproj/: project.pbxproj
ios/StudyPlayer/StudyPlayer.xcodeproj/xcshareddata/xcschemes/: StudyPlayer.xcscheme
ios/StudyPlayer/StudyPlayer/Assets.xcassets/AppIcon.appiconset/: Contents.json
ios/StudyPlayer/StudyPlayer/Assets.xcassets/StudyPlayerIcon.imageset/: Contents.json
src/study_media/: __init__.py  audio.py  cli.py  doctor.py  errors.py  export.py  package.py  paths.py  processor.py  render.py  settings.py  transcribe.py
tests/: test_package.py  test_paths.py  test_render.py
